--- a/package.json
+++ b/package.json
@@ -48,11 +48,11 @@
     "jest": "^26.6.3",
     "jest-snapshot-serializer-raw": "^1.1.0",
     "lint-staged": "^11.0.0",
-    "prettier": "^2.2.1"
+    "prettier": ">=2.0.0 <2.3"
   },
   "peerDependencies": {
     "@prettier/plugin-ruby": "^1.0.0",
-    "prettier": "^2.0.0"
+    "prettier": ">=2.0.0 <2.3"
   },
   "dependencies": {
     "prettier-html-templates": "^0.1.0"
