--- a/package.json
+++ b/package.json
@@ -39,7 +39,10 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.15.8",
+    "@babel/preset-env": "^7.15.8",
     "@prettier/plugin-ruby": "^1.5.1",
+    "@rollup/plugin-babel": "^5.3.0",
     "eslint": "^7.18.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-import": "^2.22.1",
@@ -48,13 +51,19 @@
     "jest": "^27.0.3",
     "jest-snapshot-serializer-raw": "^1.1.0",
     "lint-staged": "^11.0.0",
-    "prettier": ">=2.0.0 <2.3"
+    "prettier": ">=2.0.0",
+    "rollup": "^2.58.0",
+    "rollup-plugin-terser": "^7.0.2"
   },
   "peerDependencies": {
     "@prettier/plugin-ruby": "^1.0.0",
-    "prettier": ">=2.0.0 <2.3"
+    "prettier": ">=2.0.0"
   },
   "dependencies": {
-    "prettier-html-templates": "^0.1.0"
+    "angular-html-parser": "1.8.0",
+    "html-element-attributes": "2.3.0",
+    "html-styles": "1.0.0",
+    "html-tag-names": "1.1.5",
+    "parse-srcset": "ikatyang/parse-srcset#54eb9c1cb21db5c62b4d0e275d7249516df6f0ee"
   }
 }
