--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
   },
   "devDependencies": {
     "@prettier/plugin-ruby": "^1.5.1",
+    "@types/jest": "^28.1.1",
+    "@types/prettier": "^2.6.3",
     "eslint": "^7.18.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-import": "^2.22.1",
@@ -48,13 +50,12 @@
     "jest": "^27.0.3",
     "jest-snapshot-serializer-raw": "^1.1.0",
     "lint-staged": "^11.0.0",
-    "prettier": ">=2.0.0 <2.3"
+    "prettier": ">=2.0.0 <2.3",
+    "ts-jest": "^28.0.4",
+    "typescript": "^4.7.3"
   },
   "peerDependencies": {
     "@prettier/plugin-ruby": "^1.0.0",
-    "prettier": ">=2.0.0 <2.3"
-  },
-  "dependencies": {
-    "prettier-html-templates": "^0.1.0"
+    "prettier": "^2.0.0"
   }
 }
