--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Prettier plugin for .html.erb files",
   "repository": {
     "type": "git",
-    "url": "https://github.com/adamzapasnik/prettier-plugin-erb"
+    "url": "https://github.com/amkisko/prettier-plugin-erb"
   },
   "author": {
     "name": "Adam Zapaśnik",
@@ -13,9 +13,9 @@
     "url": "https://adamzapasnik.io"
   },
   "bugs": {
-    "url": "https://github.com/adamzapasnik/prettier-plugin-erb/issues"
+    "url": "https://github.com/amkisko/prettier-plugin-erb/issues"
   },
-  "homepage": "https://github.com/adamzapasnik/prettier-plugin-erb#readme",
+  "homepage": "https://github.com/amkisko/prettier-plugin-erb#readme",
   "keywords": [
     "plugin",
     "prettier",
@@ -24,9 +24,15 @@
     "html-erb"
   ],
   "main": "./lib/index.js",
+  "files": [
+    "lib/**/*",
+    "README.md",
+    "LICENSE"
+  ],
   "scripts": {
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "build": "tsc"
   },
   "husky": {
     "hooks": {
@@ -39,7 +45,8 @@
     ]
   },
   "devDependencies": {
-    "@prettier/plugin-ruby": "^1.5.1",
+    "@prettier/plugin-ruby": "^3.2.2",
+    "@types/jest": "^29.2.5",
     "eslint": "^7.18.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-import": "^2.22.1",
@@ -48,13 +55,15 @@
     "jest": "^27.0.3",
     "jest-snapshot-serializer-raw": "^1.1.0",
     "lint-staged": "^11.0.0",
-    "prettier": ">=2.0.0 <2.3"
+    "prettier": "3.0.0-alpha.4",
+    "ts-jest": "^29.0.5",
+    "typescript": "^4.9.4"
   },
   "peerDependencies": {
-    "@prettier/plugin-ruby": "^1.0.0",
-    "prettier": ">=2.0.0 <2.3"
+    "@prettier/plugin-ruby": "^3.2.2",
+    "prettier": "3.0.0-alpha.4"
   },
   "dependencies": {
-    "prettier-html-templates": "^0.1.0"
+    "prettier-html-templates": "https://github.com/amkisko/prettier-html-templates.git"
   }
 }
