Update jest compat

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,11 +11,12 @@
     "declaration": true,
     "declarationMap": true,
     "sourceMap": true,
-    "outDir": "lib",
+    "outDir": "src",
     "strict": false,
     "moduleResolution": "node",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
+    "allowJs": true
   },
   "include": [
     "src/**/*.ts",
