--- a/package.json
+++ b/package.json
@@ -47,21 +47,23 @@
   "devDependencies": {
     "@prettier/plugin-ruby": "^3.2.2",
     "@types/jest": "^29.2.5",
+    "@typescript-eslint/eslint-plugin": "^5.48.2",
+    "@typescript-eslint/parser": "^5.48.2",
     "eslint": "^7.18.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.3.1",
     "husky": "^6.0.0",
-    "jest": "^27.0.3",
-    "jest-snapshot-serializer-raw": "^1.1.0",
+    "jest": "^29.3.1",
+    "jest-snapshot-serializer-raw": "^1.2.0",
     "lint-staged": "^11.0.0",
-    "prettier": "3.0.0-alpha.4",
+    "prettier": "2.8.0",
     "ts-jest": "^29.0.5",
     "typescript": "^4.9.4"
   },
   "peerDependencies": {
     "@prettier/plugin-ruby": "^3.2.2",
-    "prettier": "3.0.0-alpha.4"
+    "prettier": "2.8.0"
   },
   "dependencies": {
     "prettier-html-templates": "https://github.com/amkisko/prettier-html-templates.git"
