--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
     "declaration": true,
     "declarationMap": true,
     "sourceMap": true,
-    "outDir": "src",
+    "outDir": "lib",
     "strict": false,
     "moduleResolution": "node",
     "esModuleInterop": true,
